# pyspral

./: README.md  pyproject.toml  setup.py
.github/workflows/: deploy.yml  spral.yml  test.yml
src/pyspral/: csc.pxd  csc.pyx  lsmr.pyx  random_matrix.pyx  rb.pyx  scaling.pyx  ssids.pyx  ssmfe.pyx  types.pxd  types.pyx
tests/: test_lsmr.py  test_random_matrix.py  test_rb.py  test_scaling.py  test_ssids.py  test_ssmfe.py
