[project]
name = "pyspral"
version = "0.1.6"
authors = [
  {name = "Christoph Hansknecht", email = "christoph.hansknecht@tu-clausthal.de"}
]
description = "Python bindings to the Sparse Parallel Robust Algorithms Library"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
  "scipy",
  "numpy"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research"
]

[project.urls]
Repository = "https://github.com/chrhansk/pyspral"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "setuptools-scm", "cython", "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
